gijackParser.py
# Generated from gijack.g4 by ANTLR 4.5.2
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO



class gijackParser ( Parser ):

    grammarFileName = "gijack.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'bool'", u"'char'", u"'string'", u"'int'", 
                     u"'float'", u"'>'", u"'<'", u"'>='", u"'<='", u"'=='", 
                     u"'!='", u"'and'", u"'or'", u"'&&'", u"'||'", u"'*'", 
                     u"'%'", u"'/'", u"'+'", u"'-'", u"'not'", u"'!'", u"';'", 
                     u"'{'", u"'}'", u"'['", u"']'", u"'('", u"')'", u"','", 
                     u"'program'", u"'for'", u"'while'", u"'do'", u"'funcion'", 
                     u"'read'", u"'print'", u"'if'", u"'else'", u"'='" ]

    symbolicNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"DELIMITER", 
                      u"CURLY_BRACKET_LEFT", u"CURLY_BRACKET_RIGHT", u"SQUARE_BRACKET_LEFT", 
                      u"SQUARE_BRACKET_RIGHT", u"PAREN_LEFT", u"PAREN_RIGHT", 
                      u"COMMA", u"TK_PROGRAM", u"TK_FOR", u"TK_WHILE", u"TK_DO", 
                      u"TK_FUNC", u"TK_READ", u"TK_PRINT", u"TK_IF", u"TK_ELSE", 
                      u"ASSIGN_OP", u"ID", u"INT", u"FLOAT", u"BOOL", u"WS", 
                      u"CHAR", u"STRING" ]

    RULE_start = 0
    RULE_programa = 1
    RULE_procesos = 2
    RULE_proceso = 3
    RULE_lista = 4
    RULE_asignacion = 5
    RULE_forLoop = 6
    RULE_whileLoop = 7
    RULE_doLoop = 8
    RULE_ciclos = 9
    RULE_condicion = 10
    RULE_ifCond = 11
    RULE_elseCond = 12
    RULE_elseifCond = 13
    RULE_variable = 14
    RULE_imprimir = 15
    RULE_tipo = 16
    RULE_argumentos = 17
    RULE_funcion = 18
    RULE_const = 19
    RULE_comp_op = 20
    RULE_rel_op = 21
    RULE_mult_op = 22
    RULE_add_op = 23
    RULE_neg_op = 24
    RULE_expresion = 25
    RULE_exp = 26
    RULE_e = 27
    RULE_term = 28
    RULE_fact = 29
    RULE_lectura = 30
    RULE_func_call = 31
    RULE_call_arg = 32
    RULE_simple_id = 33

    ruleNames =  [ u"start", u"programa", u"procesos", u"proceso", u"lista", 
                   u"asignacion", u"forLoop", u"whileLoop", u"doLoop", u"ciclos", 
                   u"condicion", u"ifCond", u"elseCond", u"elseifCond", 
                   u"variable", u"imprimir", u"tipo", u"argumentos", u"funcion", 
                   u"const", u"comp_op", u"rel_op", u"mult_op", u"add_op", 
                   u"neg_op", u"expresion", u"exp", u"e", u"term", u"fact", 
                   u"lectura", u"func_call", u"call_arg", u"simple_id" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    DELIMITER=23
    CURLY_BRACKET_LEFT=24
    CURLY_BRACKET_RIGHT=25
    SQUARE_BRACKET_LEFT=26
    SQUARE_BRACKET_RIGHT=27
    PAREN_LEFT=28
    PAREN_RIGHT=29
    COMMA=30
    TK_PROGRAM=31
    TK_FOR=32
    TK_WHILE=33
    TK_DO=34
    TK_FUNC=35
    TK_READ=36
    TK_PRINT=37
    TK_IF=38
    TK_ELSE=39
    ASSIGN_OP=40
    ID=41
    INT=42
    FLOAT=43
    BOOL=44
    WS=45
    CHAR=46
    STRING=47

    def __init__(self, input):
        super(gijackParser, self).__init__(input)
        self.checkVersion("4.5.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class StartContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(gijackParser.StartContext, self).__init__(parent, invokingState)
            self.parser = parser

        def programa(self):
            return self.getTypedRuleContext(gijackParser.ProgramaContext,0)


        def EOF(self):
            return self.getToken(gijackParser.EOF, 0)

        def getRuleIndex(self):
            return gijackParser.RULE_start

        def enterRule(self, listener):
            if hasattr(listener, "enterStart"):
                listener.enterStart(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitStart"):
                listener.exitStart(self)




    def start(self):

        localctx = gijackParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.programa()
            self.state = 69
            self.match(gijackParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProgramaContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(gijackParser.ProgramaContext, self).__init__(parent, invokingState)
            self.parser = parser

        def TK_PROGRAM(self):
            return self.getToken(gijackParser.TK_PROGRAM, 0)

        def ID(self):
            return self.getToken(gijackParser.ID, 0)

        def DELIMITER(self):
            return self.getToken(gijackParser.DELIMITER, 0)

        def CURLY_BRACKET_LEFT(self):
            return self.getToken(gijackParser.CURLY_BRACKET_LEFT, 0)

        def procesos(self):
            return self.getTypedRuleContext(gijackParser.ProcesosContext,0)


        def CURLY_BRACKET_RIGHT(self):
            return self.getToken(gijackParser.CURLY_BRACKET_RIGHT, 0)

        def getRuleIndex(self):
            return gijackParser.RULE_programa

        def enterRule(self, listener):
            if hasattr(listener, "enterPrograma"):
                listener.enterPrograma(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitPrograma"):
                listener.exitPrograma(self)




    def programa(self):

        localctx = gijackParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_programa)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(gijackParser.TK_PROGRAM)
            self.state = 72
            self.match(gijackParser.ID)
            self.state = 73
            self.match(gijackParser.DELIMITER)
            self.state = 74
            self.match(gijackParser.CURLY_BRACKET_LEFT)
            self.state = 75
            self.procesos()
            self.state = 76
            self.match(gijackParser.CURLY_BRACKET_RIGHT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProcesosContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(gijackParser.ProcesosContext, self).__init__(parent, invokingState)
            self.parser = parser

        def proceso(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(gijackParser.ProcesoContext)
            else:
                return self.getTypedRuleContext(gijackParser.ProcesoContext,i)


        def getRuleIndex(self):
            return gijackParser.RULE_procesos

        def enterRule(self, listener):
            if hasattr(listener, "enterProcesos"):
                listener.enterProcesos(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitProcesos"):
                listener.exitProcesos(self)




    def procesos(self):

        localctx = gijackParser.ProcesosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_procesos)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 78
                self.proceso()
                self.state = 81 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << gijackParser.T__0) | (1 << gijackParser.T__1) | (1 << gijackParser.T__2) | (1 << gijackParser.T__3) | (1 << gijackParser.T__4) | (1 << gijackParser.TK_FOR) | (1 << gijackParser.TK_WHILE) | (1 << gijackParser.TK_DO) | (1 << gijackParser.TK_READ) | (1 << gijackParser.TK_PRINT) | (1 << gijackParser.TK_IF) | (1 << gijackParser.ID))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProcesoContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(gijackParser.ProcesoContext, self).__init__(parent, invokingState)
            self.parser = parser

        def asignacion(self):
            return self.getTypedRuleContext(gijackParser.AsignacionContext,0)


        def condicion(self):
            return self.getTypedRuleContext(gijackParser.CondicionContext,0)


        def ciclos(self):
            return self.getTypedRuleContext(gijackParser.CiclosContext,0)


        def imprimir(self):
            return self.getTypedRuleContext(gijackParser.ImprimirContext,0)


        def lectura(self):
            return self.getTypedRuleContext(gijackParser.LecturaContext,0)


        def func_call(self):
            return self.getTypedRuleContext(gijackParser.Func_callContext,0)


        def variable(self):
            return self.getTypedRuleContext(gijackParser.VariableContext,0)


        def getRuleIndex(self):
            return gijackParser.RULE_proceso

        def enterRule(self, listener):
            if hasattr(listener, "enterProceso"):
                listener.enterProceso(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitProceso"):
                listener.exitProceso(self)




    def proceso(self):

        localctx = gijackParser.ProcesoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_proceso)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self._errHandler.sync(self);
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.state = 83
                self.asignacion()
                pass

            elif la_ == 2:
                self.state = 84
                self.condicion()
                pass

            elif la_ == 3:
                self.state = 85
                self.ciclos()
                pass

            elif la_ == 4:
                self.state = 86
                self.imprimir()
                pass

            elif la_ == 5:
                self.state = 87
                self.lectura()
                pass

            elif la_ == 6:
                self.state = 88
                self.func_call()
                pass

            elif la_ == 7:
                self.state = 89
                self.variable()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ListaContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(gijackParser.ListaContext, self).__init__(parent, invokingState)
            self.parser = parser

        def expresion(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(gijackParser.ExpresionContext)
            else:
                return self.getTypedRuleContext(gijackParser.ExpresionContext,i)


        def COMMA(self, i=None):
            if i is None:
                return self.getTokens(gijackParser.COMMA)
            else:
                return self.getToken(gijackParser.COMMA, i)

        def getRuleIndex(self):
            return gijackParser.RULE_lista

        def enterRule(self, listener):
            if hasattr(listener, "enterLista"):
                listener.enterLista(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitLista"):
                listener.exitLista(self)




    def lista(self):

        localctx = gijackParser.ListaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_lista)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.expresion()
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==gijackParser.COMMA:
                self.state = 93
                self.match(gijackParser.COMMA)
                self.state = 94
                self.expresion()
                self.state = 99
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AsignacionContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(gijackParser.AsignacionContext, self).__init__(parent, invokingState)
            self.parser = parser

        def simple_id(self):
            return self.getTypedRuleContext(gijackParser.Simple_idContext,0)


        def ASSIGN_OP(self):
            return self.getToken(gijackParser.ASSIGN_OP, 0)

        def expresion(self):
            return self.getTypedRuleContext(gijackParser.ExpresionContext,0)


        def DELIMITER(self):
            return self.getToken(gijackParser.DELIMITER, 0)

        def getRuleIndex(self):
            return gijackParser.RULE_asignacion

        def enterRule(self, listener):
            if hasattr(listener, "enterAsignacion"):
                listener.enterAsignacion(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitAsignacion"):
                listener.exitAsignacion(self)




    def asignacion(self):

        localctx = gijackParser.AsignacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_asignacion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.simple_id()
            self.state = 101
            self.match(gijackParser.ASSIGN_OP)
            self.state = 102
            self.expresion()
            self.state = 103
            self.match(gijackParser.DELIMITER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ForLoopContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(gijackParser.ForLoopContext, self).__init__(parent, invokingState)
            self.parser = parser

        def TK_FOR(self):
            return self.getToken(gijackParser.TK_FOR, 0)

        def PAREN_LEFT(self):
            return self.getToken(gijackParser.PAREN_LEFT, 0)

        def expresion(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(gijackParser.ExpresionContext)
            else:
                return self.getTypedRuleContext(gijackParser.ExpresionContext,i)


        def DELIMITER(self):
            return self.getToken(gijackParser.DELIMITER, 0)

        def PAREN_RIGHT(self):
            return self.getToken(gijackParser.PAREN_RIGHT, 0)

        def CURLY_BRACKET_LEFT(self):
            return self.getToken(gijackParser.CURLY_BRACKET_LEFT, 0)

        def procesos(self):
            return self.getTypedRuleContext(gijackParser.ProcesosContext,0)


        def CURLY_BRACKET_RIGHT(self):
            return self.getToken(gijackParser.CURLY_BRACKET_RIGHT, 0)

        def asignacion(self):
            return self.getTypedRuleContext(gijackParser.AsignacionContext,0)


        def variable(self):
            return self.getTypedRuleContext(gijackParser.VariableContext,0)


        def getRuleIndex(self):
            return gijackParser.RULE_forLoop

        def enterRule(self, listener):
            if hasattr(listener, "enterForLoop"):
                listener.enterForLoop(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitForLoop"):
                listener.exitForLoop(self)




    def forLoop(self):

        localctx = gijackParser.ForLoopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_forLoop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(gijackParser.TK_FOR)
            self.state = 106
            self.match(gijackParser.PAREN_LEFT)
            self.state = 109
            token = self._input.LA(1)
            if token in [gijackParser.ID]:
                self.state = 107
                self.asignacion()

            elif token in [gijackParser.T__0, gijackParser.T__1, gijackParser.T__2, gijackParser.T__3, gijackParser.T__4]:
                self.state = 108
                self.variable()

            else:
                raise NoViableAltException(self)

            self.state = 111
            self.expresion()
            self.state = 112
            self.match(gijackParser.DELIMITER)
            self.state = 113
            self.expresion()
            self.state = 114
            self.match(gijackParser.PAREN_RIGHT)
            self.state = 115
            self.match(gijackParser.CURLY_BRACKET_LEFT)
            self.state = 116
            self.procesos()
            self.state = 117
            self.match(gijackParser.CURLY_BRACKET_RIGHT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class WhileLoopContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(gijackParser.WhileLoopContext, self).__init__(parent, invokingState)
            self.parser = parser

        def TK_WHILE(self):
            return self.getToken(gijackParser.TK_WHILE, 0)

        def PAREN_LEFT(self):
            return self.getToken(gijackParser.PAREN_LEFT, 0)

        def expresion(self):
            return self.getTypedRuleContext(gijackParser.ExpresionContext,0)


        def PAREN_RIGHT(self):
            return self.getToken(gijackParser.PAREN_RIGHT, 0)

        def CURLY_BRACKET_LEFT(self):
            return self.getToken(gijackParser.CURLY_BRACKET_LEFT, 0)

        def procesos(self):
            return self.getTypedRuleContext(gijackParser.ProcesosContext,0)


        def CURLY_BRACKET_RIGHT(self):
            return self.getToken(gijackParser.CURLY_BRACKET_RIGHT, 0)

        def getRuleIndex(self):
            return gijackParser.RULE_whileLoop

        def enterRule(self, listener):
            if hasattr(listener, "enterWhileLoop"):
                listener.enterWhileLoop(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitWhileLoop"):
                listener.exitWhileLoop(self)




    def whileLoop(self):

        localctx = gijackParser.WhileLoopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_whileLoop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(gijackParser.TK_WHILE)
            self.state = 120
            self.match(gijackParser.PAREN_LEFT)
            self.state = 121
            self.expresion()
            self.state = 122
            self.match(gijackParser.PAREN_RIGHT)
            self.state = 123
            self.match(gijackParser.CURLY_BRACKET_LEFT)
            self.state = 124
            self.procesos()
            self.state = 125
            self.match(gijackParser.CURLY_BRACKET_RIGHT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DoLoopContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(gijackParser.DoLoopContext, self).__init__(parent, invokingState)
            self.parser = parser

        def TK_DO(self):
            return self.getToken(gijackParser.TK_DO, 0)

        def CURLY_BRACKET_LEFT(self):
            return self.getToken(gijackParser.CURLY_BRACKET_LEFT, 0)

        def proceso(self):
            return self.getTypedRuleContext(gijackParser.ProcesoContext,0)


        def CURLY_BRACKET_RIGHT(self):
            return self.getToken(gijackParser.CURLY_BRACKET_RIGHT, 0)

        def TK_WHILE(self):
            return self.getToken(gijackParser.TK_WHILE, 0)

        def PAREN_LEFT(self):
            return self.getToken(gijackParser.PAREN_LEFT, 0)

        def expresion(self):
            return self.getTypedRuleContext(gijackParser.ExpresionContext,0)


        def PAREN_RIGHT(self):
            return self.getToken(gijackParser.PAREN_RIGHT, 0)

        def DELIMITER(self):
            return self.getToken(gijackParser.DELIMITER, 0)

        def getRuleIndex(self):
            return gijackParser.RULE_doLoop

        def enterRule(self, listener):
            if hasattr(listener, "enterDoLoop"):
                listener.enterDoLoop(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitDoLoop"):
                listener.exitDoLoop(self)




    def doLoop(self):

        localctx = gijackParser.DoLoopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_doLoop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(gijackParser.TK_DO)
            self.state = 128
            self.match(gijackParser.CURLY_BRACKET_LEFT)
            self.state = 129
            self.proceso()
            self.state = 130
            self.match(gijackParser.CURLY_BRACKET_RIGHT)
            self.state = 131
            self.match(gijackParser.TK_WHILE)
            self.state = 132
            self.match(gijackParser.PAREN_LEFT)
            self.state = 133
            self.expresion()
            self.state = 134
            self.match(gijackParser.PAREN_RIGHT)
            self.state = 135
            self.match(gijackParser.DELIMITER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CiclosContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(gijackParser.CiclosContext, self).__init__(parent, invokingState)
            self.parser = parser

        def whileLoop(self):
            return self.getTypedRuleContext(gijackParser.WhileLoopContext,0)


        def doLoop(self):
            return self.getTypedRuleContext(gijackParser.DoLoopContext,0)


        def forLoop(self):
            return self.getTypedRuleContext(gijackParser.ForLoopContext,0)


        def getRuleIndex(self):
            return gijackParser.RULE_ciclos

        def enterRule(self, listener):
            if hasattr(listener, "enterCiclos"):
                listener.enterCiclos(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitCiclos"):
                listener.exitCiclos(self)




    def ciclos(self):

        localctx = gijackParser.CiclosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_ciclos)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            token = self._input.LA(1)
            if token in [gijackParser.TK_WHILE]:
                self.state = 137
                self.whileLoop()

            elif token in [gijackParser.TK_DO]:
                self.state = 138
                self.doLoop()

            elif token in [gijackParser.TK_FOR]:
                self.state = 139
                self.forLoop()

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CondicionContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(gijackParser.CondicionContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ifCond(self):
            return self.getTypedRuleContext(gijackParser.IfCondContext,0)


        def elseifCond(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(gijackParser.ElseifCondContext)
            else:
                return self.getTypedRuleContext(gijackParser.ElseifCondContext,i)


        def elseCond(self):
            return self.getTypedRuleContext(gijackParser.ElseCondContext,0)


        def getRuleIndex(self):
            return gijackParser.RULE_condicion

        def enterRule(self, listener):
            if hasattr(listener, "enterCondicion"):
                listener.enterCondicion(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitCondicion"):
                listener.exitCondicion(self)




    def condicion(self):

        localctx = gijackParser.CondicionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_condicion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.ifCond()
            self.state = 146
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 143
                    self.elseifCond() 
                self.state = 148
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

            self.state = 150
            _la = self._input.LA(1)
            if _la==gijackParser.TK_ELSE:
                self.state = 149
                self.elseCond()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IfCondContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(gijackParser.IfCondContext, self).__init__(parent, invokingState)
            self.parser = parser

        def TK_IF(self):
            return self.getToken(gijackParser.TK_IF, 0)

        def PAREN_LEFT(self):
            return self.getToken(gijackParser.PAREN_LEFT, 0)

        def expresion(self):
            return self.getTypedRuleContext(gijackParser.ExpresionContext,0)


        def PAREN_RIGHT(self):
            return self.getToken(gijackParser.PAREN_RIGHT, 0)

        def CURLY_BRACKET_LEFT(self):
            return self.getToken(gijackParser.CURLY_BRACKET_LEFT, 0)

        def procesos(self):
            return self.getTypedRuleContext(gijackParser.ProcesosContext,0)


        def CURLY_BRACKET_RIGHT(self):
            return self.getToken(gijackParser.CURLY_BRACKET_RIGHT, 0)

        def getRuleIndex(self):
            return gijackParser.RULE_ifCond

        def enterRule(self, listener):
            if hasattr(listener, "enterIfCond"):
                listener.enterIfCond(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitIfCond"):
                listener.exitIfCond(self)




    def ifCond(self):

        localctx = gijackParser.IfCondContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_ifCond)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.match(gijackParser.TK_IF)
            self.state = 153
            self.match(gijackParser.PAREN_LEFT)
            self.state = 154
            self.expresion()
            self.state = 155
            self.match(gijackParser.PAREN_RIGHT)
            self.state = 156
            self.match(gijackParser.CURLY_BRACKET_LEFT)
            self.state = 157
            self.procesos()
            self.state = 158
            self.match(gijackParser.CURLY_BRACKET_RIGHT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ElseCondContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(gijackParser.ElseCondContext, self).__init__(parent, invokingState)
            self.parser = parser

        def TK_ELSE(self):
            return self.getToken(gijackParser.TK_ELSE, 0)

        def CURLY_BRACKET_LEFT(self):
            return self.getToken(gijackParser.CURLY_BRACKET_LEFT, 0)

        def procesos(self):
            return self.getTypedRuleContext(gijackParser.ProcesosContext,0)


        def CURLY_BRACKET_RIGHT(self):
            return self.getToken(gijackParser.CURLY_BRACKET_RIGHT, 0)

        def getRuleIndex(self):
            return gijackParser.RULE_elseCond

        def enterRule(self, listener):
            if hasattr(listener, "enterElseCond"):
                listener.enterElseCond(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitElseCond"):
                listener.exitElseCond(self)




    def elseCond(self):
